2006-05-27  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/enumcode.pl: cast the return value of
	gimp_enums_get_type_names() to (const gchar **) to fix compiler
	warning.

	* libgimp/gimpenums.c.tail: regenerated.

2006-05-26  Manish Singh  <yosh@gimp.org>

	* gimp.pc.in: define datarootdir, so we work with newer autoconf.

2006-05-26  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/reverse-layers.scm: new script from
	Akkana Peck which reverses the layers in an image.

2006-05-26  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/dicom.c: applied patch from Dov Grobgeld 
	with several fixes for dicom loading, fixes bug #163256.

2006-05-26  Michael Natterer  <mitch@gimp.org>

	* app/dialogs/palette-import-dialog.c: set the "Number of colors"
	and "Interval" widgets insensitive for indexed images.
	Fixes bug #342970.

2006-05-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/common/png.c: moved "Load defaults" and "Save defaults"
	buttons to a separate line. Fixes bug #310291.

2006-05-24  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/jpeg/gimpexif.c
	* plug-ins/jpeg/jpeg-load.c
	* plug-ins/jpeg/jpeg-save.h
	* plug-ins/jpeg/jpeg.c
	* plug-ins/jpeg/jpeg.h: fix multiply-defined linker symbols;
	fixes bug #342456.

2006-05-24  Michael Natterer  <mitch@gimp.org>

	* plug-ins/script-fu/scripts/copy-visible.scm: use canonical
	procedure names in the help string.

2006-05-24  Sven Neumann  <sven@gimp.org>

	* app/config/gimprc-blurbs.h (SWAP_PATH_BLURB, TEMP_PATH_BLURB):
	use "folder" in place of "directory".

	* app/dialogs/preferences-dialog.c: use GtkFileChooserButtons for
	the "swap-path" and "temp-path" preferences and a simple GtkEntry
	for the "web-browser" preference.

	* modules/cdisplay_proof.c: use a GtkFileChooserButton instead of
	a GimpFileEntry widget.

2006-05-24  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpcontext.c (gimp_context_tool_list_thaw): the